--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vue-js-toggle-button": "^1.3.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-babel": "^4.4.6",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
